--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -32,6 +32,10 @@
         color: gray;
         top: 0;
       }
+
+      @include mobile-big {
+        font-size: 14px;
+      }
     }
 
     label {
