--- a/src/app/bitrix24/components/bitrix-overview-componets/bitrix-info/bitrix-info-image-block/BitrixInfoImage.scss
+++ b/src/app/bitrix24/components/bitrix-overview-componets/bitrix-info/bitrix-info-image-block/BitrixInfoImage.scss
@@ -4,7 +4,7 @@
 .bitrix-overview__image {
     position: relative;
     width: 100%;
-    
+    // z-index: 1000000000000000;
     overflow: hidden;
     @include tablet {
         height: 400px;
