--- a/src/app/bitrix24/components/bitrix-overview-componets/bitrix-info/bitrix-info-image-block/BitrixKanbanImage/BitrixKanbanImage.scss
+++ b/src/app/bitrix24/components/bitrix-overview-componets/bitrix-info/bitrix-info-image-block/BitrixKanbanImage/BitrixKanbanImage.scss
@@ -61,12 +61,12 @@
         height: 160px;
     }
     
-div {
+.test-kanban {
     position: absolute;
     // top: 10%;
     // left: 35px;
     // bottom: -5%;
-    background-image: url('../../../../../../../../public/images/Canban.png');
+    background-image: url('/images/Canban.png');
     max-width: 100%;
     width: 100%;
     height: 100%;
