--- a/src/app/bitrix24/sections/Bitrix-Overview/BitrixCanbanInfo/BitrixKanbanInfo.scss
+++ b/src/app/bitrix24/sections/Bitrix-Overview/BitrixCanbanInfo/BitrixKanbanInfo.scss
@@ -9,7 +9,12 @@
 
  justify-content: center     ;
     width: 100%;
-    
+    @include tablet {
+        margin-top: 80px;
+    }
+    @include mobile-big {
+        margin-top: 60px;
+    }
 }
 .bitrix-canban__top {
 
