--- a/src/app/home/sections/hero/hero.scss
+++ b/src/app/home/sections/hero/hero.scss
@@ -2,171 +2,171 @@
 @import "@/styles/typography";
 @import "@/styles/variables";
 
-
 .hero {
-    .container {
-      padding-top: 0;
-      min-height: calc(100svh - 100px);
-      display: flex;
-      flex-direction: column;
-  
-      @include break-height(600px) {
-        min-height: auto;
-      }
-    }
-  
-    h1 {
-      font-size: 72px;
-      line-height: 94px;
-      margin-bottom: 16px;
-    }
-  
-    &__subtitle {
-      font-size: 24px;
-      margin-bottom: 42px;
-    }
-  
-    &__btns {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-bottom: 48px;
-    }
-  
-    .open_popup {
-    //   @include button-text();
-    }
-  
-    &__description {
-      margin-top: auto;
-      font-size: 16px;
-      line-height: 22px;
-      max-width: 430px;
-      position: relative;
-      padding-left: 32px;
-      br {
-        display: none;
-      }
-      &::before {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 8px;
-        width: 8px;
-        height: 8px;
-        background-color: $main;
-        border-radius: 50%;
-      }
-    }
-  
-    .video_wrapper {
-      position: relative;
-    }
-  
-    &__video-wrapper {
-      position: absolute;
-      right: 0%;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 300px;
-      aspect-ratio: 1/1;
-      mix-blend-mode: screen;
-      // mix-blend-mode: lighten;
-      &__bg {
-        position: absolute;
-      }
-  
-      // &::before {
-      //   content: "";
-      //   position: absolute;
-      //   top: 50%;
-      //   left: 50%;
-      //   width: 1px;
-      //   height: 1px;
-      //   border-radius: 50%;
-      //   // box-shadow: 0 0 300px 300px black;
-      //   // z-index: -1;
-      // }
-  
-      @include pc {
-        max-width: 500px;
-        top: 60%;
-      }
-  
-      @include laptop() {
-        max-width: 400px;
-        top: 60%;
-      }
-      @include break-height(800px) {
-        max-width: 300px;
-        top: 75%;
-      }
-    }
-    video {
-      width: 300px;
-      height: 300px;
-    }
-  
-    img {
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-  
-    @include break(900px) {
-      h1 {
-        font-size: 61px;
-        line-height: 80px;
-      }
-    }
-  
-    @include tablet() {
-      .container {
-        display: grid;
-        min-height: auto;
-      }
-  
-      h1 {
-        font-size: 48px;
-        line-height: 60px;
-      }
-  
-      &__description {
-        padding-left: 24px;
-        max-width: 100%;
-      }
-  
-      &__video-wrapper {
-        position: static;
-        transform: unset;
-        margin: 50px auto 0;
-      }
-    }
-  
-    @include break(500px) {
-      &__subtitle {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  
-    @include mobile() {
-      h1 {
-        font-size: 44px;
-      }
-  
-      br {
-        display: block;
-      }
-    }
-  
-    @include mobile-min() {
-      h1 {
-        font-size: 40px;
-      }
-      &__description {
-        font-size: 12px;
-      }
+  .container {
+    padding-top: 0;
+    min-height: calc(100svh - 100px);
+    display: flex;
+    flex-direction: column;
+
+    @include break-height(600px) {
+      min-height: auto;
     }
   }
+
+  h1 {
+    font-size: 72px;
+    line-height: 94px;
+    margin-bottom: 16px;
+  }
+
+  &__subtitle {
+    font-size: 24px;
+    margin-bottom: 42px;
+  }
+
+  &__btns {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-bottom: 48px;
+  }
+
+  .open_popup {
+    //   @include button-text();
+  }
+
+  &__description {
+    margin-top: auto;
+    font-size: 16px;
+    line-height: 22px;
+    max-width: 430px;
+    position: relative;
+    padding-left: 32px;
+    br {
+      display: none;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 8px;
+      width: 8px;
+      height: 8px;
+      background-color: $main;
+      border-radius: 50%;
+    }
+  }
+
+  .video_wrapper {
+    position: relative;
+  }
+
+  &__video-wrapper {
+    position: absolute;
+    right: 0%;
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 400px;
+    width: 100%;
+    aspect-ratio: 1/1;
+    // mix-blend-mode: screen;
+    // mix-blend-mode: lighten;
+    &__bg {
+      position: absolute;
+    }
+
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   top: 50%;
+    //   left: 50%;
+    //   width: 1px;
+    //   height: 1px;
+    //   border-radius: 50%;
+    //   // box-shadow: 0 0 300px 300px black;
+    //   // z-index: -1;
+    // }
+
+    @include pc {
+      max-width: 500px;
+      top: 60%;
+    }
+
+    @include laptop() {
+      max-width: 400px;
+      top: 60%;
+    }
+    @include break-height(800px) {
+      max-width: 300px;
+      top: 75%;
+    }
+  }
+  video {
+    width: 300px;
+    height: 300px;
+  }
+
+  img {
+    width: 100%;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+  }
+
+  @include break(900px) {
+    h1 {
+      font-size: 61px;
+      line-height: 80px;
+    }
+  }
+
+  @include tablet() {
+    .container {
+      display: grid;
+      min-height: auto;
+    }
+
+    h1 {
+      font-size: 48px;
+      line-height: 60px;
+    }
+
+    &__description {
+      padding-left: 24px;
+      max-width: 100%;
+    }
+
+    &__video-wrapper {
+      position: static;
+      transform: unset;
+      margin: 50px auto 0;
+    }
+  }
+
+  @include break(500px) {
+    &__subtitle {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  @include mobile() {
+    h1 {
+      font-size: 44px;
+    }
+
+    br {
+      display: block;
+    }
+  }
+
+  @include mobile-min() {
+    h1 {
+      font-size: 40px;
+    }
+    &__description {
+      font-size: 12px;
+    }
+  }
+}
