--- a/src/components/modals/calendar/calendar.scss
+++ b/src/components/modals/calendar/calendar.scss
@@ -4,9 +4,49 @@
 
 .calendar {
   .rdp {
-    button {
-      background-color: #d3c87940;
-      
+    --rdp-cell-size: 32px;
+    --rdp-caption-font-size: 10px;
+    --rdp-accent-color: #00f;
+    --rdp-background-color: #e7edff;
+    --rdp-accent-color-dark: #3003e1;
+    --rdp-background-color-dark: #180270;
+    --rdp-outline: 2px solid var(--rdp-accent-color);
+    --rdp-outline-selected: 3px solid var(--rdp-accent-color);
+    --rdp-selected-color: #fff;
+
+    &-weekday {
+      text-transform: uppercase;
+    }
+
+    &-month_caption {
+      width: fit-content;
+      margin: 0 auto;
+      text-transform: capitalize;
+    }
+    
+    &-nav {
+      width: 200px;
+      justify-content: space-between;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    tr {
+      display: flex;
+      gap: 16px;
+      margin: 12px 0;
+    }
+
+    th {
+      width: 32px;
+    }
+
+    &-button {
+      background: #d3c87940;
+      font-size: 14px;
+    }
+    &-day_selected {
+      background: $main;
     }
   }
 }
