--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $white: #ffffff;
 $blur: blur(4px);
 $card-color: #ffffff0a;
 $btn-color: #ffffff14;
+$border-color: #FFFFFF29;
 
 $blue-card_gradient: linear-gradient(
   178.54deg,
