--- a/src/components/modals/calendar/calendar.scss
+++ b/src/components/modals/calendar/calendar.scss
@@ -4,15 +4,30 @@
 
 .calendar {
   .rdp {
-    --rdp-cell-size: 32px;
-    --rdp-caption-font-size: 10px;
-    --rdp-accent-color: #00f;
-    --rdp-background-color: #e7edff;
-    --rdp-accent-color-dark: #3003e1;
-    --rdp-background-color-dark: #180270;
-    --rdp-outline: 2px solid var(--rdp-accent-color);
-    --rdp-outline-selected: 3px solid var(--rdp-accent-color);
-    --rdp-selected-color: #fff;
+    &-root {
+      --rdp-cell-size: 24px;
+      --rdp-caption-font-size: 10px;
+      --rdp-accent-color: var(--main);
+      --rdp-today-color: inherit;
+      --rdp-background-color: #e7edff;
+      --rdp-accent-color-dark: #3003e1;
+      --rdp-background-color-dark: #180270;
+      --rdp-outline: none;
+      --rdp-outline-selected: none;
+      --rdp-selected-border: none;
+      --rdp-selected-color: #fff;
+      --rdp-day_button-height: 32px;
+      --rdp-day_button-width: 32px;
+      --rdp-day-height: 32px;
+      --rdp-day-width: 32px;
+
+      @include mobile-min {
+        --rdp-day_button-height: 24px;
+        --rdp-day_button-width: 24px;
+        --rdp-day-height: 24px;
+        --rdp-day-width: 24px;
+      }
+    }
 
     &-weekday {
       text-transform: uppercase;
@@ -23,7 +38,7 @@
       margin: 0 auto;
       text-transform: capitalize;
     }
-    
+
     &-nav {
       width: 200px;
       justify-content: space-between;
@@ -31,22 +46,299 @@
       transform: translateX(-50%);
     }
 
-    tr {
+    &-weekdays {
       display: flex;
       gap: 16px;
+      th {
+        width: 24px;
+      }
+
+      @include mobile-min {
+
+        th {
+          width: 22px;
+        }
+      }
+    }
+
+    &-week {
+      display: flex;
+      justify-content: space-between;
       margin: 12px 0;
     }
 
-    th {
-      width: 32px;
-    }
-
-    &-button {
+    &-day_button {
       background: #d3c87940;
       font-size: 14px;
+      @include tablet-big {
+        font-size: 12px;
+      }
+    }
+
+    &-selected {
+      button {
+        background-color: $main;
+        color: rgba(0, 0, 0, 0.8);
+      }
     }
     &-day_selected {
       background: $main;
     }
   }
+
+  &__box {
+    padding: 24px;
+  }
+
+  h2 {
+    font-size: 48px;
+    line-height: 68px;
+    margin-bottom: 48px;
+  }
+
+  .wrapper {
+    max-width: 870px;
+    margin: 0 auto;
+    background: $card-color;
+    border: 1px solid $border-color;
+    border-radius: 4px;
+    display: grid;
+    grid-template-columns: 30% 70%;
+  }
+
+  .close_popup {
+    background: none;
+    border: none;
+    border-radius: 50%;
+    img {
+      border-radius: 50%;
+    }
+  }
+
+  &__aside {
+    border-right: 1px solid $border-color;
+    &__header {
+      border-bottom: 1px solid $border-color;
+      display: flex;
+      align-items: flex-start;
+      gap: 12px;
+      justify-content: space-between;
+    }
+    &__info {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin: 16px 0;
+      span {
+        display: flex;
+        gap: 6px;
+        align-items: center;
+        font-size: 12px;
+      }
+    }
+  }
+
+  &__avatar {
+    margin-bottom: 12px;
+  }
+
+  &__name {
+    font-size: 14px;
+    opacity: 0.6;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  &__subtitle {
+    font-size: 14px;
+    opacity: 0.6;
+  }
+
+  &__description {
+    font-size: 14px;
+  }
+
+  &__main {
+    display: grid;
+    gap: 20px 40px;
+    grid-template: auto / 1fr 140px;
+    padding-left: 40px;
+
+    &__selected-day {
+      margin-bottom: 16px;
+    }
+
+    &__right {
+      padding-top: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      button {
+        padding: 10px 12px;
+        color: $main;
+        font-size: 12px;
+        font-weight: 500;
+        border: 1px solid $main;
+        border-radius: 4px;
+        background: none;
+      }
+      div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 4px;
+        input {
+          background: none;
+          border: 1px solid $border-color;
+          border-radius: 4px;
+          font-size: 12px;
+          &:focus {
+            outline: none;
+          }
+          &::-webkit-calendar-picker-indicator {
+            display: none;
+            -webkit-appearance: none;
+          }
+          &::-moz-focus-inner {
+            border: 0;
+          }
+
+          &::-webkit-inner-spin-button,
+          &::-webkit-clear-button {
+            display: none;
+          }
+
+          &::-webkit-datetime-edit-hour-field {
+            border-radius: 15%;
+          }
+          &::-webkit-datetime-edit-minute-field {
+            border-radius: 15%;
+          }
+
+          &::-webkit-datetime-edit-fields-wrapper {
+            display: flex;
+            justify-content: center;
+            padding: 4px;
+          }
+        }
+
+        button {
+          background: $main;
+          color: $white;
+        }
+      }
+    }
+
+    &__footer {
+      span {
+        font-size: 12px;
+        opacity: 0.6;
+        margin-bottom: 6px;
+        display: block;
+      }
+      div {
+        display: flex;
+        gap: 6px;
+      }
+    }
+  }
+
+  h3 {
+    grid-area: 1/1;
+    grid-column-start: 2 span;
+    font-size: 16px;
+  }
+
+  &__date-picker {
+    grid-area: 2/1;
+    width: fit-content;
+  }
+
+  @include tablet-big {
+    &__main {
+      padding-left: 24px;
+    }
+  }
+
+  @include tablet {
+    h2 {
+      font-size: 32px;
+      line-height: 44px;
+    }
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__aside {
+      &__header {
+        justify-content: unset;
+        align-items: center;
+        position: relative;
+      }
+
+      &__info {
+        span {
+          font-size: 16px;
+        }
+      }
+    }
+
+    &__description {
+      font-size: 16px;
+    }
+
+    &__logotype {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    &__avatar {
+      margin: 0 auto 16px;
+    }
+
+    h3,
+    &__name,
+    &__subtitle {
+      text-align: center;
+    }
+
+    &__name {
+      font-size: 18px;
+    }
+
+    h3 {
+      font-size: 20px;
+      margin: 6px 0;
+    }
+
+    &__subtitle {
+      font-size: 18px;
+    }
+
+    &__main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-left: 24px;
+
+      &__footer {
+        align-self: flex-start;
+      }
+
+      &__selected-day {
+        font-size: 18px;
+        text-align: center;
+      }
+    }
+  }
+
+  @include mobile-big {
+    h2 {
+      font-size: 24px;
+      line-height: 32px;
+    }
+  }
+
 }
