--- a/src/app/home/sections/section4/section4.scss
+++ b/src/app/home/sections/section4/section4.scss
@@ -118,8 +118,7 @@
         height: 34px;
         left: -87px;
         top: -5px;
-        // background-image: url("https://static.tildacdn.com/tild6439-3534-4039-b934-393634383062/check.svg");
-        background-image: url("https://static.tildacdn.com/tild3535-3361-4638-b066-343132623763/Vector.svg");
+        background-image: url("/icons/accept.svg");
         background-position: center;
         background-size: contain;
       }
