--- a/src/app/bitrix24/sections/Bitrix-Overview/BitrixBlock/BitrixBlock.scss
+++ b/src/app/bitrix24/sections/Bitrix-Overview/BitrixBlock/BitrixBlock.scss
@@ -6,8 +6,10 @@
   flex-direction: column;
   gap: 20px;
   margin-top: 120px;
+  scroll-margin-top: 120px;
   @include tablet {
     margin-top: 80px;
+    scroll-margin-top: 80px;
   }
   @include mobile-big {
     margin-top: 48px;
