--- a/src/app/home/homePage.scss
+++ b/src/app/home/homePage.scss
@@ -2,6 +2,10 @@
     --main: #d3c879
 }
 
-.fuck {
-color: aqua;
+
+#homepage__main {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
 }
+
