--- a/src/app/segments/components/swiper/swiper.scss
+++ b/src/app/segments/components/swiper/swiper.scss
@@ -16,7 +16,7 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    // height: 100% !important;
+    height: auto;
     // box-sizing: border-box;
     // min-height: 0;
   }
@@ -36,11 +36,13 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-bottom: 24px;
     li {
       display: flex;
       gap: 12px;
       font-size: 16px;
       align-items: flex-start;
+      line-height: 18px;
       img {
         margin-top: 4px;
       }
@@ -48,9 +50,15 @@
   }
 
   &__footer {
-    margin-top: 24px;
-    display: grid;
-    grid-template: auto / auto 1fr;
+    margin-top: auto;
+    display: flex !important;
+    flex-wrap: wrap !important;
+    justify-content: flex-end !important;
+    text-align: right;
+    // margin-top: 24px;
+
+    // display: grid;
+    // grid-template: auto / auto 1fr;
     align-items: center;
     gap: 12px;
 
@@ -59,7 +67,7 @@
       flex-direction: column;
       align-items: flex-end;
       * {
-        text-align: right
+        text-align: right;
       }
     }
   }
@@ -72,7 +80,7 @@
   }
 
   &__price {
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 500;
     margin-left: auto;
     grid-area: 1/2;
@@ -218,7 +226,7 @@
   }
 }
 
-.swiper-button{
+.swiper-button {
   width: 64px;
   height: 64px;
   display: grid;
@@ -226,9 +234,9 @@
   border: 1px solid $white;
   border-radius: 50%;
   position: static;
-  transition: .5s ease;
+  transition: 0.5s ease;
   &-disabled {
-    opacity: .3;
+    opacity: 0.3;
   }
   &::after {
     content: none;
@@ -246,6 +254,7 @@
   width: max-content !important;
   left: 50% !important;
   transform: translateX(-50%);
+  height: 18px;
   &::after {
     content: "";
     background-image: url("/icons/pagination_item-wrapper.svg");
@@ -253,7 +262,7 @@
     width: 48px;
     height: 26px;
     // left: calc(32px * var(--active-swiper-slide));
-    top: 4px;
+    top: 0px;
     left: 0;
     transition: 0.5s ease;
   }
