--- a/src/app/segments/sections/card/card.scss
+++ b/src/app/segments/sections/card/card.scss
@@ -29,6 +29,8 @@
     gap: 20px;
     button {
       margin: 0;
+      background: none;
+      border: 1px solid rgba(255, 255, 255, 0.6);
     }
   }
 
@@ -85,6 +87,8 @@
     justify-content: unset;
     align-items: center;
     flex-wrap: wrap;
+
+
   }
 
   .card__min-price {
@@ -144,6 +148,46 @@
       }
 
       @include break(1100px) {
+        .segments-swiper__price-wrapper {
+          flex-direction: column;
+        }
+
+        .segments-swiper__price--line {
+          display: none;
+        }
+      }
+
+      @include break(1024px) {
+        .segments-swiper__price-wrapper {
+          flex-direction: row;
+        }
+
+        .segments-swiper__price--line {
+          display: block;
+        }
+      }
+
+      @include break(710px) {
+        .segments-swiper__price-wrapper {
+          flex-direction: column;
+        }
+
+        .segments-swiper__price--line {
+          display: none;
+        }
+      }
+
+      @include break(650px) {
+        .segments-swiper__price-wrapper {
+          flex-direction: row;
+        }
+
+        .segments-swiper__price--line {
+          display: block;
+        }
+      }
+
+      @include mobile-min {
         .segments-swiper__price-wrapper {
           flex-direction: column;
         }
@@ -229,5 +273,11 @@
         content: unset;
       }
     }
+  }
+  @include mobile {
+   .card__header {
+     gap: 12px;
+
+   }
   }
 }
