--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,6 +3,7 @@
 @import "@/styles/variables";
 
 .footer {
+  margin-top: 200px;
   .container {
     display: grid;
     grid-template: 1fr 1fr / 70% 30%;
@@ -25,11 +26,10 @@
     }
 
     a:not(:first-child) {
+      @include buttonText;
       font-size: 16px;
     }
 
-    &--reviews {
-    }
     .open_popup {
       font-size: 16px;
     }
@@ -61,11 +61,13 @@
     input {
       padding-right: 20px;
     }
-    img {
+    button {
       position: absolute;
       right: 0;
       top: 50%;
       transform: translateY(-50%);
+      background: none;
+      border: none;
     }
   }
 
@@ -90,6 +92,10 @@
       max-width: 500px;
     }
   }
+
+@include tablet {
+  margin-top: 100px;
+}
 
   @include mobile-big() {
     .container {
