--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,9 @@
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
-
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --line-height-h1: 144px;
   --line-height-h2: 110px;
@@ -18,9 +20,7 @@
   --main: #d3c879;
   --XS: 14px;
   --XXS: 12px;
-
 }
-
 
 * {
   box-sizing: border-box;
@@ -37,8 +37,6 @@ main {
 
 @media (max-width: 1024px) {
 }
-
-
 
 button,
 a,
@@ -67,8 +65,6 @@ html.lenis body {
   pointer-events: none;
 }
 
-
 .rdp {
-
   /* Add more CSS variables here. */
 }
